Setup for the GitHub component

--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <title>Pluralsight React.js Getting Started</title>
   </head>
   <body>
-    <div id = "root">
-      <!-- <h1>Header is a header</h1> -->
-    </div>
+    <h1>Lesson 1</h1>
+    <h2>Incremental Button Component</h2>
+    <p>My first attempt at using simple components. Click a button to add to the counter.</p>
+    <div id = "button"></div>
+    <h1>Lesson 2</h1>
+    <h2>GitHub Card Component</h2>
+    <p>Displays the information about a GitHub user.</p>
+    <div id = "github"></div>
 
 
     <script src="vendors/react.js"></script>
     <script src="vendors/react-dom.js"></script>
     <script src="vendors/babel.js"></script>
-    <script type="text/babel" src="script.jsx"></script>
+    <script type="text/babel" src="components/button.jsx"></script>
+    <script type="text/babel" src="components/github.jsx"></script>
+
   </body>
 </html>
