--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id = "button"></div>
     <h1>Lesson 2</h1>
     <h2>GitHub Card Component</h2>
-    <p>Displays the information about a GitHub user.</p>
+    <p>Displays the information of a GitHub user.</p>
     <div id = "github"></div>
 
 
