--- a/index.html
+++ b/index.html
@@ -3,24 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Pluralsight React.js Getting Started</title>
-  </head>
-  <body>
-    <h1>Lesson 1</h1>
-    <h2>Incremental Button Component</h2>
-    <p>My first attempt at using simple components. Click a button to add to the counter.</p>
-    <div id = "button"></div>
-    <h1>Lesson 2</h1>
-    <h2>GitHub Card Component</h2>
-    <p>Displays the information of a GitHub user.</p>
-    <div id = "github"></div>
-
-
     <script src="vendors/react.js"></script>
     <script src="vendors/react-dom.js"></script>
     <script src="vendors/babel.js"></script>
+    <script src="vendors/jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
+    <!-- COMPONENTS -->
     <script type="text/babel" src="components/button.jsx"></script>
     <script type="text/babel" src="components/github.jsx"></script>
-    <script src="vendors/jquery.js"></script>
+    <script type="text/babel" src="components/game.jsx"></script>
+
+  </head>
+  <body>
+    <h1 class="heading">Lesson 1</h1>
+    <div class="lesson">
+      <h2>Incremental Button Component</h2>
+      <p>My first attempt at using simple components. Click a button to add to the counter.</p>
+      <div id = "button"></div>
+    </div>
+    <h1 class="heading">Lesson 2</h1>
+    <div class="lesson">
+      <h2>GitHub Card Component</h2>
+      <p>Displays the information of a GitHub user. Enter a GitHub username to display their avatar and name.</p>
+      <div id = "github"></div>
+    </div>
+    <h1 class="heading">Lesson 3</h1>
+    <div class="lesson">
+      <h2>Simple Math Game for Kids</h2>
+      <p>More Info</p>
+      <div id = "game"></div>
+    </div>
 
   </body>
 </html>
